@@ -2,6 +2,8 @@ Gora Change Log
 
 Trunk (unreleased changes):
 
+* GORA-88 HBaseByteInterface not thread safe (ferdy)
+
 * GORA-93 [gora-cassandra] Add implementation of CassandraStore.get(key) (Sujit Pal via lewismc)
 
 * GORA-58 Upgrade Gora-Cassandra to use Cassandra 1.0.2 (lewismc)
